@@ -1,2 +1,5 @@
-java -jar GameOfLife.jar
+set PATH_TO_FX=<path_to_javafx_lib_folder>
+
+java --module-path %PATH_TO_FX% --add-modules javafx.controls -jar ./GameOfLife.jar
+
 pause
